Fix docs header double border

--- a/docs/_includes/styles/masthead.scss
+++ b/docs/_includes/styles/masthead.scss
@@ -1,6 +1,4 @@
 .site-masthead {
-    
-    border-top: 1px solid #e5e5e5;
     color: black;
     position: relative;
     padding: 64px 0 32px;
